@@ -13,6 +13,9 @@
   CR: HTTP(S) - CGI: Not allowed/configured methods are now answered with status 405
       Previously the requests were answered with status 403.
   CR: HTTP(S) - CGI: Update of the PHP preparation
+  CR: HTTP(S) - Directory Index: Optimization
+      Generation of the file list in the Generator instead of the Worker.
+  
   CR: Remote: Optimization / reduction of code
   CR: Sources: Update of the comment format
 
